--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "start": "ts-node index.ts --help"
   },
   "dependencies": {
-    "cleye": "^1.3.4"
+    "@ai-sdk/anthropic": "^1.2.12",
+    "ai": "^4.3.16",
+    "cleye": "^1.3.4",
+    "dotenv": "^16.5.0",
+    "zod": "^3.25.65"
   },
   "devDependencies": {
     "@types/node": "^17.0.0",
