# Changes - Updated configuration path from  to - Modified config command examples and help text - Enhanced API key configuration process - Added  creation for  files - Updated package.json with project details and bin configuration
# Reasoning
- More descriptive and consistent naming for configuration directory
- Improved user guidance during API key setup
- Added security measure to prevent accidentally committing  files
- Prepared package for potential npm publication and CLI usage

# Summary
The changes focus on improving the user experience and configuration process for the autocommit CLI tool. The modifications include better path management, more informative help text, and added security measures for handling API keys. The package is now set up for potential distribution as a CLI tool.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "cleye-demo",
-  "private": true,
+  "name": "autocommit",
+  "version": "1.0.0",
+  "description": "A CLI tool to commit your changes with AI",
+  "main": "index.ts",
+  "bin": {
+    "autocommit": "./index.ts"
+  },
   "scripts": {
     "start": "ts-node index.ts --help"
   },
