# Changes - Added  for building the project - Updated  with build and publish scripts - Created  for build configuration - Updated  to include shebang for executable - Added executable build step in - Updated config path to use  instead of - Added  directory with compiled JavaScript - Updated  and  fields in
# Reasoning
-  provides an easy way to bundle TypeScript projects for Node.js
- Build configuration allows for minification and targeting specific Node.js versions
- Shebang enables direct execution of the script
- Updated config path for better clarity and consistency
- Compiled JavaScript allows for easier distribution and installation

# Summary
- Improved project build process
- Enhanced CLI tool distribution
- Simplified configuration management
- Prepared project for potential npm publication

--- a/package.json
+++ b/package.json
@@ -2,23 +2,39 @@
   "name": "autocommit",
   "version": "1.0.0",
   "description": "A CLI tool to commit your changes with AI",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "bin": {
-    "autocommit": "./index.ts"
+    "autocommit": "dist/index.js"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "start": "ts-node index.ts --help"
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "start": "node dist/index.js --help",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
     "ai": "^4.3.16",
     "cleye": "^1.3.4",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.5.65",
     "zod": "^3.25.65"
   },
   "devDependencies": {
     "@types/node": "^17.0.0",
     "ts-node": "^10.4.0",
+    "tsup": "^8.0.0",
     "typescript": "^4.5.4"
-  }
+  },
+  "keywords": [
+    "cli",
+    "git",
+    "commit",
+    "ai",
+    "anthropic"
+  ],
+  "author": "frbarbre",
+  "license": "MIT"
 }
