--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
+    "build": "tsup src/index.ts --format cjs --outDir dist",
+    "dev": "tsup src/index.ts --format cjs --outDir dist --watch",
     "start": "node dist/index.js --help",
     "prepublishOnly": "npm run build"
   },
