--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "autocommit",
+  "name": "claye",
   "version": "1.0.0",
   "description": "A CLI tool to commit your changes with AI",
   "main": "dist/index.js",
   "bin": {
-    "autocommit": "dist/index.js"
+    "claye": "dist/index.js"
   },
   "files": [
     "dist"
@@ -33,7 +33,8 @@
     "git",
     "commit",
     "ai",
-    "anthropic"
+    "anthropic",
+    "claye"
   ],
   "author": "frbarbre",
   "license": "MIT"
